--- a/content-manager-app/package.json
+++ b/content-manager-app/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "bulma": "^0.9.3",
+    "moment": "^2.29.1",
     "next": "12.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2"
